Feature/multi support (#9)
* Add spigot support

* Complete + fix java 17

* Fix ParticleResolver for older mc versions

* Use proper scheduler

* Remove sending multiple block data, as it breaks compatibility with older versions

* Make a ParticleBuilder to reuse

* Fix reload not working

* Add mohist compatibility

* Add folia check

* Add PaperLib

* Add Folia support